3단계 - HTTP 웹 서버 리팩토링 (#280)