@@ -11,6 +11,7 @@ import webserver.response.HttpResponse;
 import webserver.response.HttpStatusCode;
 import webserver.response.ResponseHeader;
 
+import java.util.Collections;
 import java.util.Map;
 
 public class UserLoginController implements Controller {
@@ -29,13 +30,8 @@ public class UserLoginController implements Controller {
 
     private HttpResponse login(HttpRequest request) {
         validateUser(request);
-        return HttpResponse.of(
-                HttpStatusCode.FOUND,
-                ResponseHeader.from(Map.of(
-                        HttpHeaders.LOCATION, "/index.html",
-                        HttpHeaders.SET_COOKIE, "logined=true; Path=/"
-                ))
-        );
+        return HttpResponse.sendRedirect("/index.html",
+                ResponseHeader.from(Collections.singletonMap(HttpHeaders.SET_COOKIE, "logined=true; Path=/")));
     }
 
     private void validateUser(HttpRequest request) {
@@ -45,8 +41,8 @@ public class UserLoginController implements Controller {
                     HttpStatusCode.FOUND,
                     ResponseHeader.from(Map.of(
                             HttpHeaders.LOCATION, "/user/login_failed.html",
-                            HttpHeaders.SET_COOKIE, "logined=false; Path=/")
-                    )
+                            HttpHeaders.SET_COOKIE, "logined=false; Path=/"
+                    ))
             );
         }
     }
